Bug 500905.  Don't try to create text frames for textnodes that don't have frames if their parent frame's parent type is not block.  That way we won't reconstruct the row, for example, if a cell is reframed and has whitespace next to it.  Also fix WipeContainingBlock to not reframe in that case anyway.  r+sr=roc